--- a/index.html
+++ b/index.html
@@ -14,5 +14,30 @@
         <link rel="stylesheet" href="./assets/scripts/script.js" defer>
     </head>
     <body>
+        <header id="header">
+            <div id="inner-header">
+                <h2 id="brand">Pearson Hardman</h2>
+                <nav id="navbar">
+                    <a href="#header">Início</a>
+                    <a href="#expertise-areas">Serviços</a>
+                    <a href="#about">Sobre</a>
+                    <a href="#team">Time</a>
+                    <a href="#contact">Contato</a>
+                </nav>
+            </div>
+            <div class="banner active">
+                <span class="square"></span>
+                <h2>Melhores experts em direito do país</h2>
+                <p>
+                    Os advogados mais bem qualificados estão aqui, agende uma reunião e 
+                    conheça nosso time
+                </p>
+            </div>
+            <div class="dots">
+                <div class="dot active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </header>
     </body>
 </html>
