--- a/index.html
+++ b/index.html
@@ -39,5 +39,65 @@
                 <div class="dot"></div>
             </div>
         </header>
+        <main id="expertise-areas" class="text-image-section">
+            <div id="expertise-information" class="text-container">
+                <p class="section-subtitle">
+                    Áreas de atuação
+                </p>
+                <h3 class="section-title">
+                    Nossos especialistas podem ajudar você em Direito Civil, 
+                    Ambiental, Empresarial.
+                </h3>
+                <a href="#" class="btn">Saiba Mais</a>
+            </div>
+            <div id="expertise-image-container" class="image-container">
+                <i class="bi bi-people"></i>
+                <img 
+                    src="./assets/imgs/employees_banner.jpg" 
+                    alt="Advogados da Pearson Hardman"
+                >
+            </div>
+            <div id="other-services">
+                <div class="service">
+                    <img src="./assets/imgs/bank.jpg" alt="Banco">
+                    <i class="bi bi-bank"></i>
+                    <div class="service-info">
+                        <h4>Bancos e Finanças pessoais</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Sapiente amet voluptatem eum modi asperiores eligendi fugit 
+                            libero, magnam expedita facilis quia molestias, cumque 
+                            accusantium mollitia veritatis? Amet velit veritatis illo.
+                        </p>
+                    </div>
+                </div>
+                <div class="service">
+                    <img src="./assets/imgs/construction.jpg" alt="Construção">
+                    <i class="bi bi-bricks"></i>
+                    <div class="service-info">
+                        <h4>Construção de Imóveis sem escritura</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Sapiente amet voluptatem eum modi asperiores eligendi fugit 
+                            libero, magnam expedita facilis quia molestias, cumque 
+                            accusantium mollitia veritatis? Amet velit veritatis illo.
+                        </p>
+                    </div>
+                </div>
+                <div class="service">
+                    <img src="./assets/imgs/company.jpg" alt="Empresa">
+                    <i class="bi bi-building"></i>
+                    <div class="service-info">
+                        <h4>Empresas e funcionários</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Sapiente amet voluptatem eum modi asperiores eligendi fugit 
+                            libero, magnam expedita facilis quia molestias, cumque 
+                            accusantium mollitia veritatis? Amet velit veritatis illo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
