--- a/index.html
+++ b/index.html
@@ -180,5 +180,34 @@
                 <img src="./assets/imgs/court.jpg" alt="Advogado em um tribunal">
             </div>
         </section>
+        <section id="team">
+            <span class="square"></span>
+            <h2>
+                A <span>Pearson Hardman </span> tem um time de especialistas
+                a sua disposição
+            </h2>
+            <div class="employees">
+                <div class="employee">
+                    <img src="./assets/imgs/mike.jpg" alt="Mike Ross">
+                    <p class="employee-name">Mike Ross</p>
+                    <p class="employee-role">Advogado</p>
+                </div>
+                <div class="employee">
+                    <img src="./assets/imgs/harvey.png" alt="Harvey Specter">
+                    <p class="employee-name">Harvey Specter</p>
+                    <p class="employee-role">Advogado Sênior</p>
+                </div>
+                <div class="employee">
+                    <img src="./assets/imgs/louis.jpg" alt="Louis Litt">
+                    <p class="employee-name">Louis Litt</p>
+                    <p class="employee-role">Advogado</p>
+                </div>
+                <div class="employee">
+                    <img src="./assets/imgs/jessica.jpg" alt="Jessica Pearson">
+                    <p class="employee-name">Jessica Pearson</p>
+                    <p class="employee-role">CEO</p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
