--- a/index.html
+++ b/index.html
@@ -209,5 +209,23 @@
                 </div>
             </div>
         </section>
+        <section id="contact" class="text-image-section">
+            <div id="contact-image-container" class="image-container">
+                <img src="./assets/imgs/office.jpg" alt="Advogados no escritório">
+            </div>
+            <div id="contact-information" class="text-container">
+                <i class="bi bi-envelope"></i>
+                <p class="section-subtitle">Entre em contato</p>
+                <form action="#">
+                    <div class="form-control">
+                        <input type="text" name="name" id="name" placeholder="Nome">
+                        <input type="email" name="email" id="email" placeholder="E-mail">
+                    </div>
+                    <input type="tel" name="phone" id="phone" placeholder="Telefone">
+                    <textarea name="message" id="message" placeholder="Mensagem..."></textarea>
+                    <input type="submit" value="Enviar" class="btn">
+                </form>
+            </div>
+        </section>
     </body>
 </html>
