--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="./assets/styles/style.css">
         <!-- JavaScript -->
-        <link rel="stylesheet" href="./assets/scripts/script.js" defer>
+        <script src="./assets/scripts/script.js" defer></script>
     </head>
     <body>
         <header id="header">
