--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
                     conheça nosso time
                 </p>
             </div>
+            <div class="banner">
+                <span class="square"></span>
+                <h2>Conheça o nosso time</h2>
+                <p>
+                    Veja as especialidades dos nossos advogados, e entenda como eles podem
+                    lhe ajudar
+                </p>
+            </div>
+            <div class="banner">
+                <span class="square"></span>
+                <h2>Os nossos resultados</h2>
+                <p>
+                    Confira as nossas métricas e conheça os resultados que já obtivemos
+                </p>
+            </div>
             <div class="dots">
                 <div class="dot active"></div>
                 <div class="dot"></div>
